overflow fix

--- a/lab_3.css
+++ b/lab_3.css
@@ -1,7 +1,6 @@
 html {
     margin: 0px;
     background-color: white;
-    overflow: hidden;
 }
 
 body {
